src/test/deca/codegen/invalid/result/*_output.res
  IMA -- Fichier src/test/deca/codegen/invalid/*.ass introuvable
